adicionando os exercicios do capitulo dois

--- a/python_analise_dados_DSA/capitulo_2/DSA-Exercicios.ipynb
+++ b/python_analise_dados_DSA/capitulo_2/DSA-Exercicios.ipynb
@@ -373,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -388,6 +390,13 @@
    ],
    "source": [
     "frase[0:18]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fim"
    ]
   }
  ],
